@@ -45,6 +45,7 @@ void COptionsPasswordPolicy::DoDataExchange(CDataExchange* pDX)
   DDX_Check(pDX, IDC_USEUPPERCASE, m_pwuseuppercase);
   DDX_Check(pDX, IDC_EASYVISION, m_pweasyvision);
   DDX_Check(pDX, IDC_SAVEPWHISTORY, m_savepwhistory);
+  DDX_Text(pDX, IDC_DEFPWHNUM, m_pwhistorynumdefault);
   //}}AFX_DATA_MAP
 }
 
@@ -74,6 +75,13 @@ BOOL COptionsPasswordPolicy::OnInitDialog()
   pspin->SetRange(4, 1024);
   pspin->SetBase(10);
   pspin->SetPos(m_pwlendefault);
+
+  pspin = (CSpinButtonCtrl *)GetDlgItem(IDC_PWHSPIN);
+
+  pspin->SetBuddy(GetDlgItem(IDC_DEFPWHNUM));
+  pspin->SetRange(1, 255);
+  pspin->SetBase(10);
+  pspin->SetPos(m_pwhistorynumdefault);
 
   if (IsDlgButtonChecked(IDC_USELOWERCASE) ||
       IsDlgButtonChecked(IDC_USEUPPERCASE) ||
@@ -194,7 +202,6 @@ BOOL COptionsPasswordPolicy::OnKillActive()
     return FALSE;
   }
 
-
   if (m_pwusehexdigits) {
     if (m_pwlendefault % 2 != 0) {
       AfxMessageBox(_T("Passwords generated in hexadecimal format must have even lengths\nas two hexadecimal characters make up a single ASCII character."));
@@ -205,10 +212,27 @@ BOOL COptionsPasswordPolicy::OnKillActive()
     AfxMessageBox(_T("At least one type of character (lowercase, uppercase, digits,\nsymbols, hexadecimal) must be permitted."));
     return FALSE;
   }
+  
+  if ((m_pwlendefault < 1) || (m_pwlendefault > 1024)) {
+  	AfxMessageBox(_T("Default password length must be between 1 and 1024."));
+  	((CEdit*)GetDlgItem(IDC_DEFPWLENGTH))->SetFocus();
+  	return FALSE;
+  }
+
+  if (m_savepwhistory && ((m_pwhistorynumdefault < 1) || (m_pwhistorynumdefault > 255))) {
+  	AfxMessageBox(_T("Default number of saved password history entries must be between 1 and 255."));
+  	((CEdit*)GetDlgItem(IDC_DEFPWHNUM))->SetFocus();
+  	return FALSE;
+  }
+
   //End check
 
   return TRUE;
 }
+
 void COptionsPasswordPolicy::OnSavePWHistory() 
 {
+  BOOL enable = (((CButton*)GetDlgItem(IDC_SAVEPWHISTORY))->GetCheck() == 1) ? TRUE : FALSE;
+  GetDlgItem(IDC_PWHSPIN)->EnableWindow(enable);
+  GetDlgItem(IDC_DEFPWHNUM)->EnableWindow(enable);
 }
